# sunotap

./: .gitignore  README.md  setup.bat  suno.py
suno-login/: build.bat  package.json
suno-login/src-tauri/: Cargo.toml  tauri.conf.json
suno-login/src-tauri/icons/: icon.icns
suno-login/src-tauri/src/: main.rs
